# rest_api_project

./: .dockerignore  .gitignore  Dockerfile  README.md  crud.py  database_initialisation.py  database_models.py  docker-compose.yaml  entrypoint.sh  init.sql  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  unit_tests_test.py
app/: entrypoint.sh  models.py  schemas.py  unit_tests_test.py
app/routers/: acquire_lock.py  create_user.py
rest_api/: pyproject.toml
routers/: acquire_lock.py  create_user.py  get_users.py  ping.py  release_lock.py
