[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = ""
authors = ["Tuammar <petrosetr1502@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.6.0"
anyio = "4.3.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
click = "8.1.7"
fastapi = "0.110.2"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.7"
passlib = "1.7.4"
psycopg2 = "2.9.9"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
sniffio = "1.3.1"
sqlalchemy = "2.0.29"
starlette = "0.37.2"
typing-extensions = "4.11.0"
uvicorn = "0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
